<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_marginTop="72dp"
        android:baselineAligned="false"
        android:text="@string/username"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Имя пользователя" />

    <Button
        android:id="@+id/button_clear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="#8FC2C2"
        android:fontFamily="sans-serif"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ok"
        tools:text="Очистить" />

    <Button
        android:id="@+id/button_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginBottom="93dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="#8FC2C2"
        android:fontFamily="sans-serif"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:text="ОK" />

    <TextView
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_marginTop="165dp"
        android:layout_marginBottom="95dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Электронная почта" />

    <TextView
        android:id="@+id/help"
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:text="@string/help"
        android:textAlignment="textStart"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ok"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="#C7EBEA"
        android:backgroundTint="#C7EBEA"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/input_username"
        android:textColor="#7A7A7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="#C7EBEA"
        android:backgroundTint="#C7EBEA"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:text="@string/input_email"
        android:textColor="#7A7A7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>